Show sign in dialog iff there is one locked profile.

After deleting a profile, UserManager and sign in dialog will be displayed if the fallback profile is locked.
However, if force-sign-in is enabled and there is more than one profiles, sign in dialog will not be displayed.
Because it's not clear for which of the remaining profiles is being used.

Bug: 756556
Change-Id: Ie11520b148f054c9045e57b7064a96f8925a9d3f
Reviewed-on: https://chromium-review.googlesource.com/626758
Reviewed-by: Tommy Li <tommycli@chromium.org>
Commit-Queue: Owen Min <zmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496818}
Former-commit-id: 740a2d59fcf00ddec60d3df08a5264f01b51dc63